# py-pkgs-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__package_slug }}/: BUILD.md  CHANGELOG.md  README.md  pyproject.toml
{{ cookiecutter.__package_slug }}/.github/workflows/: lobo.yml
